[package]
name = "langgraph_rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "langgraph_rust_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python-bindings"]
python-bindings = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.23.5", features = ["extension-module"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
libc = "0.2"

