[package]
name = "langgraph_rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "langgraph_rust_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
libc = "0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

